[package]
name = "battlefield-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
rhai = { version = "1.7", features = ["sync", "serde", "unchecked"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
battlefield-api = { path = "../battlefield-api/" }
