[package]
name = "battlefield-server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[lib]
path = "src/lib.rs"
name = "battlefield_server"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
anyhow = "1.0.57"
async-trait = "0.1.56"
bytestring = "1.0.0"
dotenv = "0.15.0"
json-patch = "0.2.6"
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "4dd5150bcbb10a420e00d74fc67e550735bc68fc", features = ["uuid"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", rev = "4dd5150bcbb10a420e00d74fc67e550735bc68fc" }
lazy_static = "1.4.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "json", "uuid", "offline"] }
tokio = { version = "1.17.0", features = ["fs", "sync"] }
toml = "0.5.9"
uuid = { version = "1.1.2", features = ["serde"] }

battlefield-core = { path = "../battlefield-core/" }
battlefield-api = { path = "../battlefield-api/" }

# https://github.com/tkaitchuck/aHash/issues/95
indexmap = "=1.6.2"
