[package]
name = "battlefield-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.23"
gloo = "0.8.0"
serde = "1.0.143"
serde_json = "1.0.83"
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19.3"
