cargo-features = ["per-package-target"]

[package]
name = "battlefield-web"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.23"
gloo = "0.8.0"
js-sys = "0.3.59"
serde = { version = "1.0.143", features = ["rc"] }
serde_json = "1.0.83"
surf = { version = "2.3.2", default-features = false, features = ["wasm-client"] }
uuid = { version = "1.1.2", features = ["v4", "js"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = ["Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "WebSocket", "MessageEvent", "ErrorEvent"] }
yew = "0.19.3"
yew-router = "0.16.0"
battlefield-api = { path = "../battlefield-api/" }
cynic = { version = "1.0.0", features = ["surf", "surf-wasm-client"] }
json-patch = "0.2.6"
